# colorEditor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  colorEditor.cmake  main.cpp
editor/: CMakeLists.txt  colorbutton.cpp  colorbutton.h  colorcombobox.cpp  colorcombobox.h  colordialog.cpp  colordialog.h  colorutility.cpp  colorutility.h  colorwidget.cpp  colorwidget.h  colorwidgetaction.cpp  colorwidgetaction.h  compoundcolorwidget.cpp  compoundcolorwidget.h  compoundcolorwidget.ui  resources.qrc
editor/colorwidgets/: colorbox.cpp  colorbox.h  colorbutton.cpp  colorbutton.h  colorpreviewwidget.cpp  colorpreviewwidget.h  colorrampwidget.cpp  colorrampwidget.h  colorsliderwidget.cpp  colorsliderwidget.h  colortextwidget.cpp  colortextwidget.h  colorwheel.cpp  colorwheel.h
examples/: CMakeLists.txt  main.cpp
ui/: qgsgradientcolorrampdialog.h  qgsgradientstopeditor.h
